<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>mobo_bot_base</name>
  <version>1.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="samuel.c.agba@gmail.com">Samuel Obiagba</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  
  <depend>robot_localization</depend>
  <depend>control_msgs</depend>
  <depend>ros2controlcli</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <depend>slam_toolbox</depend>
  <depend>navigation2</depend>
  <depend>nav2_bringup</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
